{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 105,
  "lineage": "14606938-8b50-69dd-d162-c1f01bc67d19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mi_app_spring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec4ab14b1c5a10f2",
            "arn": "arn:aws:ec2:us-east-1:646640003372:instance/i-092eff389ff1b7ea5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092eff389ff1b7ea5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clasesdevops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cf72e476836e268f"
              }
            ],
            "primary_network_interface_id": "eni-0cf72e476836e268f",
            "private_dns": "ip-10-0-100-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.223",
            "public_dns": "ec2-34-200-242-8.compute-1.amazonaws.com",
            "public_ip": "34.200.242.8",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a41b3747aa41f1d6",
                "volume_size": 85,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7e92c523e497dca",
            "tags": {
              "Name": "prod-0"
            },
            "tags_all": {
              "Name": "prod-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d65f70c2f11a0bc3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "i-092eff389ff1b7ea5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec4ab14b1c5a10f2",
            "arn": "arn:aws:ec2:us-east-1:646640003372:instance/i-0efd7791bf2a5b38d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efd7791bf2a5b38d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clasesdevops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07de14e89bacf43ba"
              }
            ],
            "primary_network_interface_id": "eni-07de14e89bacf43ba",
            "private_dns": "ip-10-0-100-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.84",
            "public_dns": "ec2-98-81-119-134.compute-1.amazonaws.com",
            "public_ip": "98.81.119.134",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-075b087baf817cccc",
                "volume_size": 85,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7e92c523e497dca",
            "tags": {
              "Name": "prod-1"
            },
            "tags_all": {
              "Name": "prod-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d65f70c2f11a0bc3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "i-0efd7791bf2a5b38d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:security-group/sg-0d65f70c2f11a0bc3",
            "description": "Security Group para proyecto Terraform",
            "egress": [],
            "id": "sg-0d65f70c2f11a0bc3",
            "ingress": [],
            "name": "Reglas para spring-20251111155953532100000002",
            "name_prefix": "Reglas para spring-",
            "owner_id": "646640003372",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Reglas para spring"
            },
            "tags_all": {
              "Name": "Reglas para spring"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "sg-0d65f70c2f11a0bc3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2944765570",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0d65f70c2f11a0bc3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-830516385",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d65f70c2f11a0bc3",
            "security_group_rule_id": "sgr-03900e125a2d7b864",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-282386417",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d65f70c2f11a0bc3",
            "security_group_rule_id": "sgr-025a2e3306f3bf21f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2791211588",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d65f70c2f11a0bc3",
            "security_group_rule_id": "sgr-08f173353fd386a54",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:network-acl/acl-08558bf39e3c589c9",
            "default_network_acl_id": "acl-08558bf39e3c589c9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08558bf39e3c589c9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "646640003372",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0d7e92c523e497dca",
              "subnet-0e7f04f7d55ce53c4"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:route-table/rtb-0083173f1e0cd2fc4",
            "default_route_table_id": "rtb-0083173f1e0cd2fc4",
            "id": "rtb-0083173f1e0cd2fc4",
            "owner_id": "646640003372",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:security-group/sg-0a999be0668fab75b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a999be0668fab75b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "646640003372",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:internet-gateway/igw-078f77fadd1ec7128",
            "id": "igw-078f77fadd1ec7128",
            "owner_id": "646640003372",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring",
              "Terraform": "true"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078f77fadd1ec7128",
            "id": "r-rtb-0e3f50862aa6b24f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f50862aa6b24f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f50862aa6b24f6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:route-table/rtb-0e3f50862aa6b24f6",
            "id": "rtb-0e3f50862aa6b24f6",
            "owner_id": "646640003372",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "rtb-0e3f50862aa6b24f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315f3471a6088330",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f50862aa6b24f6",
            "subnet_id": "subnet-0d7e92c523e497dca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c555ac7d7cda0f9",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f50862aa6b24f6",
            "subnet_id": "subnet-0e7f04f7d55ce53c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:subnet/subnet-0d7e92c523e497dca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7e92c523e497dca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646640003372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "subnet-0d7e92c523e497dca",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:subnet/subnet-0e7f04f7d55ce53c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f04f7d55ce53c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646640003372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-033b610faccdceb4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "subnet-0e7f04f7d55ce53c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646640003372:vpc/vpc-033b610faccdceb4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08558bf39e3c589c9",
            "default_route_table_id": "rtb-0083173f1e0cd2fc4",
            "default_security_group_id": "sg-0a999be0668fab75b",
            "dhcp_options_id": "dopt-017262e9fb79d0bb2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033b610faccdceb4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0083173f1e0cd2fc4",
            "owner_id": "646640003372",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-para-terraform-spring",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "646640003372",
            "id": "vpc-033b610faccdceb4b",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}